Fix Instagram link in contact section

--- a/Portofolio_Malviansyah/portofolio.html
+++ b/Portofolio_Malviansyah/portofolio.html
@@ -58,7 +58,7 @@
         <div>
             <h3>Saya aktif di Platform Media Sosial</h3>
             <ul class="ul-contact">
-                <li class="li-contact"><a href="hhttps://www.instagram.com/avin_zul">Instagram</a></li>
+                <li class="li-contact"><a href="hhttps://instagram.com/avin_zul">Instagram</a></li>
                 <li class="li-contact"><a href="https://github.com/OPAxv">GitHub</a></li>
             </ul>
         </div>
